# saaspoc

./: Architecture.md  README.md  SECURITY.md  auth.py  database.py  external_api.py  integrations.py  main.py  models.py  pyproject.toml  requirements.txt
templates/: base.html  dashboard.html  github.html  login.html  orders.html  stripe.html  weather.html
